# hdx-scraper-ibtracs

./: .pre-commit-config.yaml  README.md  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run.py
.config/: ruff.toml
.github/workflows/: publish.yaml  run-python-script.yaml
src/hdx/scraper/ibtracs/: __main__.py  _version.py  ibtracs.py
src/hdx/scraper/ibtracs/config/: hdx_dataset_static.yaml  hdx_resource_view_static.yaml  project_configuration.yaml
tests/: conftest.py  test_ibtracs.py
tests/fixtures/: ibtracs_ALL_list_v04r01.csv  ibtracs_ALL_list_v04r01_CUB.csv  ibtracs_ALL_list_v04r01_lines.geojson  ibtracs_ALL_list_v04r01_lines_CUB.geojson
tests/fixtures/input/: dataset-cub-ibtracs-tropical-storm-tracks.json  dataset-unmap-international-boundaries-geojson.json  ibtracs.txt  wrl_polbnda_int_1m_uncs.geojson
