#########################
# Project Configuration #
#########################

# Project name and version needed to run tests

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-scraper-ibtracs"
requires-python = ">=3.12"
dependencies = [
  "geopandas",
  "hdx-python-api",
  "hdx-python-utilities",
  "pandas",
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov"
]
dev = ["pre-commit"]

[project.scripts]
run = "hdx.scraper.ibtracs.__main__:main"
